# AmittaiScript

./: CMakeLists.txt  main.cpp
assembler/: Assembler.cpp  Assembler.h  BufferHandler.cpp  BufferHandler.h
globals/: Bytecode.cpp  Bytecode.h  Util.cpp  Util.h
scripts/: test.aa  test.ac
vm/: VM.cpp  VM.h
